--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "antd": "^5.3.2",
+    "classnames": "^2.3.2"
   }
 }
