--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "antd": "^5.3.2",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "lodash": "^4.17.21"
   }
 }
