--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npm run dev",
     "dev": "dumi dev",
     "build": "dumi build",
-    "prepare": "husky install && dumi setup"
+    "prepare": "husky install && dumi setup",
+    "test": "jest"
   },
   "authors": [
     "zjc 18341876207@qq.com"
@@ -23,10 +24,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@testing-library/react": "^14.0.0",
     "dumi": "^2.0.2",
     "husky": "^8.0.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
   },
@@ -34,5 +40,11 @@
     "antd": "^5.3.2",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "testEnvironment": "jsdom"
   }
 }
